card image overflow fix

--- a/src/pages/media-cards/index.module.scss
+++ b/src/pages/media-cards/index.module.scss
@@ -179,6 +179,7 @@ img {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  max-width: fit-content;
 }
 
 .button {
